<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/pointAdapter_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <!-- Latitude -->

    <!-- Longitude -->

    <TextView
        android:id="@+id/pointAdapter_latLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/val_latitude"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/pointAdapter_latValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="lat_xxx"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pointAdapter_latLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pointAdapter_lonLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/val_longitude"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointAdapter_latLabel" />

    <TextView
        android:id="@+id/pointAdapter_lonValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="lon_xxx"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pointAdapter_lonLabel"
        app:layout_constraintTop_toBottomOf="@+id/pointAdapter_latValue" />

    <TextView
        android:id="@+id/pointAdapter_altLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/val_altitude"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pointAdapter_lonLabel" />

    <TextView
        android:id="@+id/pointAdapter_altValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="alt_xxx"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pointAdapter_altLabel"
        app:layout_constraintTop_toBottomOf="@+id/pointAdapter_lonValue" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>